# 270191U025-Software-Architecture-assignment-1

./: .gitignore  CMakeLists.txt  README.md  autograde.py
include/: my_math.hpp
src/: main.cpp  my_math.cpp  tests.cpp
